fixing minor overflow issue during animations on mobile

--- a/src/app/game/components/game-board/game-board.component.scss
+++ b/src/app/game/components/game-board/game-board.component.scss
@@ -1,6 +1,7 @@
 .game-board {
   display: inline-block;
   position: relative;
+  overflow: hidden;
 
   .grid-column {
     display: flex;
